--- a/public/index.html
+++ b/public/index.html
@@ -1,66 +1,95 @@
 <!DOCTYPE html>
-<html data-wf-domain="infinix.com" data-wf-page="652ab251b8dc5f55fea70ec0" data-wf-site="63793925c7db23ce040b0824">
-
-
-<head>
-  <meta charset="utf-8" />
-  <title>Infinix | Technology that Make a Difference</title>
-  <meta
-    content="At Infinix Innovations, our mission transcends conventional technology providers. We go beyond providing interactive technology for events and exhibitions, specializing in crafting unique, immersive installations, interactive experiences, innovative presentations, and gaming technology Our dedication lies in boosting marketing campaigns by using experiential technology to create (Avant Garde / state of the art )experiences for every project."
-    name="description" />
-  <meta content="Infinix | Technology that makes a Difference" property="og:title" />
-  <meta
-    content="At Infinix Innovations, our mission transcends conventional technology providers. We go beyond providing interactive technology for events and exhibitions, specializing in crafting unique, immersive installations, interactive experiences, innovative presentations, and gaming technology Our dedication lies in boosting marketing campaigns by using experiential technology to create (Avant Garde / state of the art )experiences for every project."
-    property="og:description" />
-  <meta content="images/cover.png" property="og:image" />
-  <meta content="Infinix | Technology that makes a Difference" property="twitter:title" />
-  <meta
-    content="At Infinix Innovations, our mission transcends conventional technology providers. We go beyond providing interactive technology for events and exhibitions, specializing in crafting unique, immersive installations, interactive experiences, innovative presentations, and gaming technology Our dedication lies in boosting marketing campaigns by using experiential technology to create (Avant Garde / state of the art )experiences for every project."
-    property="twitter:description" />
-  <meta content="images/cover.png" property="twitter:image" />
-  <meta property="og:type" content="website" />
-  <meta content="summary_large_image" name="twitter:card" />
-  <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <!-- <link href="../src/Components/Home/internal.css" rel="stylesheet" type="text/css" />
+<html
+  data-wf-domain="infinix.com"
+  data-wf-page="652ab251b8dc5f55fea70ec0"
+  data-wf-site="63793925c7db23ce040b0824"
+>
+  <head>
+    <meta charset="utf-8" />
+    <title>Infinix | Technology that Make a Difference</title>
+    <meta
+      content="At Infinix Innovations, our mission transcends conventional technology providers. We go beyond providing interactive technology for events and exhibitions, specializing in crafting unique, immersive installations, interactive experiences, innovative presentations, and gaming technology Our dedication lies in boosting marketing campaigns by using experiential technology to create (Avant Garde / state of the art )experiences for every project."
+      name="description"
+    />
+    <meta
+      content="Infinix | Technology that makes a Difference"
+      property="og:title"
+    />
+    <meta
+      content="At Infinix Innovations, our mission transcends conventional technology providers. We go beyond providing interactive technology for events and exhibitions, specializing in crafting unique, immersive installations, interactive experiences, innovative presentations, and gaming technology Our dedication lies in boosting marketing campaigns by using experiential technology to create (Avant Garde / state of the art )experiences for every project."
+      property="og:description"
+    />
+    <meta content="images/cover.png" property="og:image" />
+    <meta
+      content="Infinix | Technology that makes a Difference"
+      property="twitter:title"
+    />
+    <meta
+      content="At Infinix Innovations, our mission transcends conventional technology providers. We go beyond providing interactive technology for events and exhibitions, specializing in crafting unique, immersive installations, interactive experiences, innovative presentations, and gaming technology Our dedication lies in boosting marketing campaigns by using experiential technology to create (Avant Garde / state of the art )experiences for every project."
+      property="twitter:description"
+    />
+    <meta content="images/cover.png" property="twitter:image" />
+    <meta property="og:type" content="website" />
+    <meta content="summary_large_image" name="twitter:card" />
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <!-- <link href="../src/Components/Home/internal.css" rel="stylesheet" type="text/css" />
   <link href="../src/Components/Home/mainstyle.css" rel="stylesheet" type="text/css" /> -->
-  <style></style>
-  <script type="text/javascript">
-    !(function (o, c) {
-      var n = c.documentElement,
-        t = " w-mod-";
-      (n.className += t + "js"),
-        ("ontouchstart" in o ||
-          (o.DocumentTouch && c instanceof DocumentTouch)) &&
-        (n.className += t + "touch");
-    })(window, document);
-  </script>
-  <link href="../src/Components/assets/images/infinicx-icon.jpg" rel="shortcut icon" type="image/x-icon" />
-  <link
-    href="https://assets-global.website-files.com/63793925c7db23ce040b0824/6509b2d7644db925a0dee164_AdificoFavBigger.png"
-    rel="apple-touch-icon" />
-  <link href="https://infinix.com/" rel="canonical" />
 
-  <script type="text/javascript">
-    window.dataLayer = window.dataLayer || [];
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag("js", new Date());
-    gtag("set", "developer_id.dZGVlNj", true);
-    gtag("config", "G-6ZW78T1EPK");
-  </script>
-  <meta name="theme-color" content="#262D29" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
+    <style></style>
+    <script type="text/javascript">
+      !(function (o, c) {
+        var n = c.documentElement,
+          t = " w-mod-";
+        (n.className += t + "js"),
+          ("ontouchstart" in o ||
+            (o.DocumentTouch && c instanceof DocumentTouch)) &&
+            (n.className += t + "touch");
+      })(window, document);
+    </script>
+    <link
+      href="../src/Components/assets/images/infinicx-icon.jpg"
+      rel="shortcut icon"
+      type="image/x-icon"
+    />
+    <link
+      href="https://assets-global.website-files.com/63793925c7db23ce040b0824/6509b2d7644db925a0dee164_AdificoFavBigger.png"
+      rel="apple-touch-icon"
+    />
+    <link href="https://infinix.com/" rel="canonical" />
 
-  <link rel="canonical" href="https://infinix.com/" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-  <!-- [Attributes by Finsweet] Form Submit Actions -->
-  <script defer src="https://cdn.jsdelivr.net/npm/@finsweet/attributes-formsubmit@1/formsubmit.js"></script>
-  <!--
+    <script type="text/javascript">
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("set", "developer_id.dZGVlNj", true);
+      gtag("config", "G-6ZW78T1EPK");
+    </script>
+    <meta name="theme-color" content="#262D29" />
+
+    <link rel="canonical" href="https://infinix.com/" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+    />
+    <!-- [Attributes by Finsweet] Form Submit Actions -->
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/@finsweet/attributes-formsubmit@1/formsubmit.js"
+    ></script>
+    <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <!--
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -69,15 +98,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-</head>
+  </head>
 
-<body>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
 
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
-
-
-  <!--
+    <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -87,34 +114,45 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=63793925c7db23ce040b0824"
-    type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-    crossorigin="anonymous"></script>
+    <script
+      src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=63793925c7db23ce040b0824"
+      type="text/javascript"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
 
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js"></script> -->
-  <script async src="https://cdn.jsdelivr.net/npm/@finsweet/cookie-consent@1/fs-cc.js"
-    fs-cc-mode="informational"></script>
-  <!-- <script src="https://unpkg.com/split-type"></script> -->
-  <script src="./webflow.js" type="text/javascript"></script>
+    <script
+      async
+      src="https://cdn.jsdelivr.net/npm/@finsweet/cookie-consent@1/fs-cc.js"
+      fs-cc-mode="informational"
+    ></script>
+    <!-- <script src="https://unpkg.com/split-type"></script> -->
+    <script src="./webflow.js" type="text/javascript"></script>
 
-  <script data-id-scroll data-autoinit="true" data-duration="1" data-orientation="vertical" data-smoothWheel="true"
-    data-smoothTouch="false" data-touchMultiplier="1.5" data-easing="(t) => (t === 1 ? 1 : 1 - Math.pow(2, -10 * t))"
-    data-useOverscroll="true" data-useControls="true" data-useAnchor="true" data-useRaf="true" data-infinite="false"
-    defer
-    src="https://assets-global.website-files.com/645e0e1ff7fdb6dc8c85f3a2/648b1b0b9d6638f9da912dc2_lenis-offbrand-v2.txt"></script>
+    <script
+      data-id-scroll
+      data-autoinit="true"
+      data-duration="1"
+      data-orientation="vertical"
+      data-smoothWheel="true"
+      data-smoothTouch="false"
+      data-touchMultiplier="1.5"
+      data-easing="(t) => (t === 1 ? 1 : 1 - Math.pow(2, -10 * t))"
+      data-useOverscroll="true"
+      data-useControls="true"
+      data-useAnchor="true"
+      data-useRaf="true"
+      data-infinite="false"
+      defer
+      src="https://assets-global.website-files.com/645e0e1ff7fdb6dc8c85f3a2/648b1b0b9d6638f9da912dc2_lenis-offbrand-v2.txt"
+    ></script>
 
+    <script></script>
+    <script></script>
 
-
-
-  <script>
-
-  </script>
-  <script>
-
-  </script>
-
-  <!-- <script>
+    <!-- <script>
     // Check if cookie exists
     if (!document.cookie.includes("loaderShown")) {
       // Show loader
@@ -129,13 +167,12 @@
       document.querySelector(".page-loader").style.display = "none";
     }
   </script> -->
-  <script>
-    $(document).on("keydown", function (e) {
-      if (e.which === 116) {
-        e.preventDefault();
-      }
-    });
-  </script>
-</body>
-
+    <script>
+      $(document).on("keydown", function (e) {
+        if (e.which === 116) {
+          e.preventDefault();
+        }
+      });
+    </script>
+  </body>
 </html>
