--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,9 @@
     <!-- <link href="../src/Components/Home/internal.css" rel="stylesheet" type="text/css" />
   <link href="../src/Components/Home/mainstyle.css" rel="stylesheet" type="text/css" /> -->
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
