--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,18 @@
     <!-- <link href="../src/Components/Home/internal.css" rel="stylesheet" type="text/css" />
   <link href="../src/Components/Home/mainstyle.css" rel="stylesheet" type="text/css" /> -->
 
+    <link
+      rel="stylesheet"
+      type="text/css"
+      charset="UTF-8"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"
+    />
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js"></script>
 
