--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,13 @@
 >
   <head>
     <meta charset="utf-8" />
-    <title>Infinix | Technology that Make a Difference</title>
+    <title>Infinix Innovations | Dubai | Technology that makes a difference</title>
     <meta
       content="At Infinix Innovations, our mission transcends conventional technology providers. We go beyond providing interactive technology for events and exhibitions, specializing in crafting unique, immersive installations, interactive experiences, innovative presentations, and gaming technology Our dedication lies in boosting marketing campaigns by using experiential technology to create (Avant Garde / state of the art )experiences for every project."
       name="description"
     />
     <meta
-      content="Infinix | Technology that makes a Difference"
+      content="Infinix Innovations | Dubai | Technology that makes a difference"
       property="og:title"
     />
     <meta
@@ -21,7 +21,7 @@
     />
     <meta content="images/cover.png" property="og:image" />
     <meta
-      content="Infinix | Technology that makes a Difference"
+      content="Infinix Innovations | Dubai | Technology that makes a difference"
       property="twitter:title"
     />
     <meta
@@ -66,12 +66,12 @@
       })(window, document);
     </script>
     <link
-      href="../src/Components/assets/images/infinicx-icon.jpg"
+      href="logo.png"
       rel="shortcut icon"
       type="image/x-icon"
     />
     <link
-      href="https://assets-global.website-files.com/63793925c7db23ce040b0824/6509b2d7644db925a0dee164_AdificoFavBigger.png"
+      href="logo.png"
       rel="apple-touch-icon"
     />
     <link href="https://infinix.com/" rel="canonical" />
