--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,15 @@
       content="At Infinix Innovations, our mission transcends conventional technology providers. We go beyond providing interactive technology for events and exhibitions, specializing in crafting unique, immersive installations, interactive experiences, innovative presentations, and gaming technology Our dedication lies in boosting marketing campaigns by using experiential technology to create (Avant Garde / state of the art )experiences for every project."
       name="description"
     />
+<!-- Google Tag Manager -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-18YPT40RGM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
+  gtag('config', 'G-18YPT40RGM');
+</script>
+
     <meta
       content="Infinix Innovations | Dubai | Technology that makes a difference"
       property="og:title"
@@ -187,5 +196,7 @@
         }
       });
     </script>
+    <!-- Google tag (gtag.js) -->
+
   </body>
 </html>
